# etradetest

./: .gitignore  README.md  pyproject.toml  setup.py
EtradePythonClient/etrade_python_client/: etrade_python_client.py
EtradeTest/: __main__.py  configlib.py  someutils.py
EtradeTest/accounts/: accounts.py
EtradeTest/algorithm/: blsh.py  movingaverage.py
etrade_python_client/: __main__.py  config.example.ini  configlib.py  someutils.py
etrade_python_client/accounts/: accounts.py
etrade_python_client/order/: order.py
