[tool.poetry]
name = "etradetest"
version = "0.1.0"
description = ""
authors = ["Henry Post <HenryFBP@gmail.com>"]

[tool.poetry.dependencies]
python = "^3"
rauth = { git = "https://github.com/HenryFBP/rauth", branch = "master" }
#rauth = "0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
